# cmm

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  check.sh  unitTest.sh
.github/workflows/: build_and_test.yml  build_and_test_linux.yml  build_and_test_mac.yml  build_windows_msvc.yml  cmake.yml
cmake_modules/: FindGMP.cmake  FindGMPXX.cmake
include/cmm/: AddressOfNode.h  ArgNode.h  BinOpNode.h  BlockNode.h  CastNode.h  CompilationUnitNode.h  DeclarationStatementNode.h  DerefNode.h  Dump.h  EnumDefinitionStatementNode.h  EnumNodeType.h  EnumTable.h  EnumUsageNode.h  Enumerator.h  ExpressionNode.h  ExpressionStatementNode.h  Field.h  FieldAccessNode.h  Frame.h  FunctionCallNode.h  FunctionDeclarationStatementNode.h  FunctionDefinitionStatementNode.h  IField.h  IfElseStatementNode.h  Keyword.h  Lexer.h  LitteralNode.h  Location.h  Node.h  NodeList.h  NodeListFwd.h  ParameterNode.h  ParenExpressionNode.h  Parser.h  ParserPredictor.h  Reporter.h  ReturnStatementNode.h  Scope.h  ScopeManager.h  Snapshot.h  (+16 more)
include/cmm/config/: CLIargs.h
include/cmm/container/: StringView.h  StringView.inl
include/cmm/platform/: Architecture.h  PlatformBase.h  PlatformLLVM.h
include/cmm/visit/: Analyzer.h  Dump.h  Encode.h  Visitor.h
src/: AddressOfNode.cpp  ArgNode.cpp  BinOpNode.cpp  BlockNode.cpp  CastNode.cpp  CompilationUnitNode.cpp  DeclarationStatementNode.cpp  DerefNode.cpp  Dump.cpp  EnumDefinitionStatementNode.cpp  EnumNodeType.cpp  EnumTable.cpp  EnumUsageNode.cpp  Enumerator.cpp  ExpressionNode.cpp  ExpressionStatementNode.cpp  Field.cpp  FieldAccessNode.cpp  Frame.cpp  FunctionCallNode.cpp  FunctionDeclarationStatementNode.cpp  FunctionDefinitionStatementNode.cpp  IfElseStatementNode.cpp  Keyword.cpp  Lexer.cpp  LitteralNode.cpp  Location.cpp  Main.cpp  Node.cpp  ParameterNode.cpp  ParenExpressionNode.cpp  Parser.cpp  ParserPredictor.cpp  Reporter.cpp  ReturnStatementNode.cpp  Scope.cpp  ScopeManager.cpp  Snapshot.cpp  StatementNode.cpp  StringView.cpp  (+14 more)
src/config/: CLIargs.cpp
src/platform/: PlatformBase.cpp  PlatformLLVM.cpp
src/visit/: Analyzer.cpp  Dump.cpp  Encode.cpp  Visitor.cpp
test/: AnalyzerTest.cpp  CLITest.cpp  ContainerTest.cpp  LexerTest.cpp  MiscTest.cpp  ParserTest.cpp
